# earthquake-event-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: hourly_reports_dag.py
app/: main.py
app/application/dtos/: common.py  earthquake.py  ingestion.py  metric.py  report.py  report_generation.py
app/application/interfaces/: earthquake_feed_client.py  earthquake_repository.py  hourly_metric_repository.py  hourly_report_repository.py
app/application/mappers/: earthquake_mapper.py
app/application/use_cases/: generate_hourly_report.py  get_earthquakes.py  get_hourly_metrics.py  get_hourly_reports.py  ingest_earthquakes.py  refresh_hourly_metrics.py
app/domain/entities/: earthquake_event.py  hourly_metric.py  hourly_report.py
app/domain/exceptions/: base.py  earthquakes.py
app/domain/services/: hourly_metrics_calculator.py  hourly_report_builder.py
app/domain/value_objects/: coordinates.py
app/infrastructure/clients/: usgs_client.py
app/infrastructure/config/: settings.py
app/infrastructure/containers/: application_container.py
app/infrastructure/database/: indexes.py  mongodb.py
app/infrastructure/logging/: logger.py  request_context.py
app/infrastructure/repositories/: mongo_earthquake_repository.py  mongo_hourly_metric_repository.py  mongo_hourly_report_repository.py  mongo_mappers.py  query_builders.py
app/workers/: runtime.py
deploy/docker/: airflow.Dockerfile  app.Dockerfile
docs/: architecture.md  websocket.md
docs/postman/: Earthquake API.postman_collection.json
(+30 files in other folders)
